Still building core code

--- a/amle/projects/samples/network_tc/project_policy.yaml
+++ b/amle/projects/samples/network_tc/project_policy.yaml
@@ -10,8 +10,9 @@ datasets:
           file: data/samples/network_tc/data_set_2.csv
       transform:
         - trim_to_rows:
-            - brianfm.streamon.fm
-            - www.victoria.ac.nz/ecs
+            - test:
+                - brianfm.streamon.fm
+                - www.victoria.ac.nz/ecs
         - trim_to_columns:
             - type
             - packet_size_7
