Working on core functionality, more work required

--- a/amle/projects/samples/network_tc/project_policy.yaml
+++ b/amle/projects/samples/network_tc/project_policy.yaml
@@ -27,8 +27,9 @@ datasets:
               max: 1518
         - translate:
             - column: type
-              streaming: 1
-              browsing: 0
+            - values:
+                streaming: 1
+                browsing: 0
         - set_output_columns:
             - type
         - display: print
