Added dataset shuffle method

--- a/amle/projects/samples/network_tc/project_policy.yaml
+++ b/amle/projects/samples/network_tc/project_policy.yaml
@@ -32,6 +32,7 @@ datasets:
                 browsing: 0
         - set_output_columns:
             - type
+        - shuffle: 1
         - display: print
 #
 algorithms:
