--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ amle/*.pyc
 amle/algorithms/*.pyc
 amle/algorithms/user/*
 !amle/algorithms/user/__init__.py
+amle/projects/user/
 tests/.cache/
 tests/*.pyc
 tests/__pycache__/
