--- a/amle/projects/samples/network_tc/project_policy.yaml
+++ b/amle/projects/samples/network_tc/project_policy.yaml
@@ -15,6 +15,8 @@ datasets:
             - test:
                 - brianfm.streamon.fm
                 - www.victoria.ac.nz/ecs
+                - www.bbc.co.uk
+                - www.paypal.com
         - trim_to_columns:
             - type
             - packet_size_7
@@ -57,7 +59,7 @@ experiments:
       algorithm:
           name: ANN_simple_2_layer
           parameters:
-              input_neurons: 4
+              input_neurons: 3
               input_variables: 6
               random_seed: 1
 #
@@ -70,4 +72,6 @@ run:
               dataset: training_dataset
               iterations: 60000
               partions_number: 4
+              result_range: 1
+              result_threshold: 0.1
 
