--- a/amle/projects/samples/mlnn3/project_policy.yaml
+++ b/amle/projects/samples/mlnn3/project_policy.yaml
@@ -43,9 +43,14 @@ experiments:
       algorithm:
           name: ANN_simple_2_layer
           parameters:
-              input_neurons: 4
-              input_variables: 3
               random_seed: 1
+              layers_config:
+                - inputs: 3
+                  neurons: 4
+                  name: hidden_layer
+                - inputs: 4
+                  neurons: 1
+                  name: output_layer
 #
 run:
     - name: run_experiment_1
